asyncgit/src/gitui/tests/snapshots/gnostr_asyncgit__gitui__tests__editor__scroll_past_selection.snap
---
source: src/gitui/tests/editor.rs
expression: ctx.redact_buffer()
---
 +line 20 (file-1)                                                              |
 modified   file-2                                                              |
▌@@ -0,0 +1,20 @@                                                               |
▌+line 1 (file-2)                                                               |
▌+line 2 (file-2)                                                               |
▌+line 3 (file-2)                                                               |
▌+line 4 (file-2)                                                               |
▌+line 5 (file-2)                                                               |
▌+line 6 (file-2)                                                               |
▌+line 7 (file-2)                                                               |
▌+line 8 (file-2)                                                               |
▌+line 9 (file-2)                                                               |
▌+line 10 (file-2)                                                              |
▌+line 11 (file-2)                                                              |
▌+line 12 (file-2)                                                              |
▌+line 13 (file-2)                                                              |
▌+line 14 (file-2)                                                              |
▌+line 15 (file-2)                                                              |
▌+line 16 (file-2)                                                              |
▌+line 17 (file-2)                                                              |
styles_hash: 7c4bdf91930d826e
